# Prompt-Reliability-Lab

./: .env.example  README.md  evaluate.py  pyproject.toml  rubric.md
prompts/: README.md  corpus.csv  gold_expectations.json
prompts/templates/: v1_baseline.txt  v2_structured.txt  v3_cot.txt
reports/: comparison.md  v1_raw.json  v1_report.md  v2_raw.json  v2_report.md  v3_raw.json  v3_report.md
src/: __init__.py  config.py  evaluator.py  metrics.py  reporter.py  runner.py
src/models/: __init__.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py
tests/: test_evaluator.py  test_metrics.py
